cabal-version:      2.4
name:               saboteur
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/githubuser/saboteur#readme
license:            BSD-3-Clause
license-file:       LICENSE
author:             Santiago Camargo Rodríguez
maintainer:         santi.camargo.rodriguez@gmail.com
copyright:          2019 Santiago Camargo Rodríguez
category:           Web
build-type:         Simple
extra-source-files: README.md

library
  hs-source-dirs:     src
  exposed-modules:
    Board
    Card
    Game
    Lib
    Mocks
    Player
    PrettyPrint
    Turn
    Utils

  build-depends:
      base            >=4.7   && <5
    , random          >=1.1
    , random-shuffle  >=0.0.4 && <1

  --  , aeson >= 1.3.1.1 && < 1.5.0.0
  --  , text >= 1.2.3.0 && < 1.2.4.0
  default-language:   Haskell2010
  default-extensions:
    DeriveFunctor
    DeriveGeneric
    OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/saboteur
